# svalboar

./: .gitignore  Cargo.toml  README-dariogoetz.md  README-marcusbuffet.md  README.md  deny.toml  flake.nix  justfile  rust-analyzer.toml
.github/workflows/: rust.yml
config/evaluation/: default.yml  klanext.yml  standard.yml
config/keyboard/: svalboard.yml
docs/: README.md  architecture.md  character-support.md  cli-usage.md  community-layouts.md  configuration.md  evaluation-metrics.md  multi-layer.md  ngram-data.md  sval-keyboard.md  web-interface.md
keyboard_layout/: Cargo.toml
keyboard_layout/benches/: keyboard_benchmarks.rs
layout_evaluation/: Cargo.toml
layout_evaluation/benches/: evaluate.rs
layout_evaluation/src/: evaluation.rs
layout_evaluation/src/metrics/: bigram_metrics.rs
layout_evaluation/src/metrics/bigram_metrics/: movement_pattern.rs  scissoring.rs  std_finger_repeats.rs  std_movement_pattern.rs  sval_finger_repeats.rs  sval_movement_pattern.rs
layout_optimization/layout_optimization_common/: Cargo.toml
layout_optimization/layout_optimization_common/benches/: optimization_benchmarks.rs
layout_optimization/layout_optimization_genetic/: Cargo.toml
layout_optimization/layout_optimization_genetic/benches/: genetic_benchmarks.rs
layout_optimization/layout_optimization_sa/: Cargo.toml
layout_optimization/layout_optimization_sa/benches/: sa_benchmarks.rs
layout_optimization/layout_optimization_sa/src/: optimization.rs
scripts/: compare_korpora.py
svalboar/: Cargo.toml
svalboar/benches/: layout_benchmarks.rs
svalboar/src/: common.rs
webui/layout_evaluation_wasm/: Cargo.toml
webui/layouts_webservice/: Cargo.toml  Rocket.toml  setup_heroku.sh
