[package]
name = "keyboard_layout"
version = "0.2.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.75"
description = "Keyboard layout representation and manipulation"
homepage = "https://github.com/dariogoetz/keyboard_layout_optimizer"
repository = "https://github.com/dariogoetz/keyboard_layout_optimizer"
categories = ["data-structures", "text-processing"]
keywords = ["keyboard", "layout", "typing"]

[dependencies]
# External dependencies using workspace versions
ahash = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
handlebars = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

# Direct dependencies (not in workspace)
smallmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "keyboard_benchmarks"
harness = false
