[package]
name = "layout_evaluation"
version = "0.2.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.75"
description = "Keyboard layout evaluation metrics and algorithms"
homepage = "https://github.com/dariogoetz/keyboard_layout_optimizer"
repository = "https://github.com/dariogoetz/keyboard_layout_optimizer"
categories = ["algorithms", "text-processing"]
keywords = ["keyboard", "layout", "evaluation", "metrics", "typing"]

[dependencies]
# Workspace dependencies
keyboard_layout = { path = "../keyboard_layout" }

# External dependencies using workspace versions
ahash = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
colored = { workspace = true }
env_logger = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

# Direct dependencies (not in workspace)
csv = "1.3"
ordered-float = "4.2"
parking_lot = "0.12"
priority-queue = "2.0"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "evaluate"
harness = false
