[package]
name = "svalboar"
version = "0.2.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.75"
description = "Keyboard layout optimization toolkit - main binary"
homepage = "https://github.com/dariogoetz/keyboard_layout_optimizer"
repository = "https://github.com/dariogoetz/keyboard_layout_optimizer"
categories = ["command-line-utilities", "text-processing"]
keywords = ["keyboard", "layout", "optimization", "typing", "ergonomics"]

default-run = "evaluate"

[[bin]]
name = "evaluate"
path = "src/bin/evaluate.rs"

[[bin]]
name = "optimize_genetic"
path = "src/bin/optimize_genetic.rs"

[[bin]]
name = "optimize_sa"
path = "src/bin/optimize_sa.rs"

[dependencies]
# Workspace dependencies
keyboard_layout = { path = "../keyboard_layout" }
layout_evaluation = { path = "../layout_evaluation" }
layout_optimization_common = { path = "../layout_optimization/layout_optimization_common" }
layout_optimization_genetic = { path = "../layout_optimization/layout_optimization_genetic" }
layout_optimization_sa = { path = "../layout_optimization/layout_optimization_sa" }

# External dependencies using workspace versions
ahash = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
ctrlc = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "layout_benchmarks"
harness = false
