[package]
name = "layout_optimization_common"
version = "0.2.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.75"
description = "Common utilities and types for keyboard layout optimization"
homepage = "https://github.com/dariogoetz/keyboard_layout_optimizer"
repository = "https://github.com/dariogoetz/keyboard_layout_optimizer"
categories = ["algorithms", "data-structures"]
keywords = ["keyboard", "layout", "optimization", "algorithms"]

[dependencies]
# Workspace dependencies
keyboard_layout = { path = "../../keyboard_layout" }
layout_evaluation = { path = "../../layout_evaluation" }

# External dependencies using workspace versions
anyhow = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "optimization_benchmarks"
harness = false
