[package]
name = "layout_optimization_genetic"
version = "0.2.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.75"
description = "Genetic algorithm implementation for keyboard layout optimization"
homepage = "https://github.com/dariogoetz/keyboard_layout_optimizer"
repository = "https://github.com/dariogoetz/keyboard_layout_optimizer"
categories = ["algorithms", "science"]
keywords = [
  "keyboard",
  "layout",
  "genetic-algorithm",
  "optimization",
  "evolutionary",
]

[dependencies]
# Workspace dependencies
keyboard_layout = { path = "../../keyboard_layout" }
layout_evaluation = { path = "../../layout_evaluation" }
layout_optimization_common = { path = "../layout_optimization_common" }

# External dependencies using workspace versions
anyhow = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
genevo = "0.7.1"
colored.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "genetic_benchmarks"
harness = false
