[package]
name = "layout_optimization_sa"
version = "0.2.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.75"
description = "Simulated annealing implementation for keyboard layout optimization"
homepage = "https://github.com/dariogoetz/keyboard_layout_optimizer"
repository = "https://github.com/dariogoetz/keyboard_layout_optimizer"
categories = ["algorithms", "science"]
keywords = [
  "keyboard",
  "layout",
  "simulated-annealing",
  "optimization",
  "metaheuristic",
]

[dependencies]
# Workspace dependencies
keyboard_layout = { path = "../../keyboard_layout" }
layout_evaluation = { path = "../../layout_evaluation" }
layout_optimization_common = { path = "../layout_optimization_common" }

# External dependencies using workspace versions
anyhow = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
rand_xoshiro = "0.6.0"
colored.workspace = true
argmin = "0.10.0"
serde_yaml.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "sa_benchmarks"
harness = false
