[package]
name = "layout_evaluation_wasm"
version = "0.2.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.75"
description = "WebAssembly bindings for keyboard layout evaluation"
homepage = "https://github.com/dariogoetz/keyboard_layout_optimizer"
repository = "https://github.com/dariogoetz/keyboard_layout_optimizer"
categories = ["wasm", "web-programming"]
keywords = ["keyboard", "layout", "wasm", "webassembly", "evaluation"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Workspace dependencies
keyboard_layout = { path = "../../keyboard_layout" }
layout_evaluation = { path = "../../layout_evaluation" }

# External dependencies using workspace versions
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

# WebAssembly specific dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# For better error messages in wasm
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "HtmlElement", "Window"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Optimize for size in release builds
[profile.release]
opt-level = "s"
debug = false
lto = true
