[package]
name = "layouts_webservice"
version = "0.2.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.75"
description = "Web service for keyboard layout evaluation and optimization"
homepage = "https://github.com/dariogoetz/keyboard_layout_optimizer"
repository = "https://github.com/dariogoetz/keyboard_layout_optimizer"
categories = ["web-programming", "network-programming"]
keywords = ["keyboard", "layout", "web-service", "api", "rocket"]
publish = false

[dependencies]
# Workspace dependencies
keyboard_layout = { path = "../../keyboard_layout" }
layout_evaluation = { path = "../../layout_evaluation" }

# External dependencies using workspace versions
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Web framework
rocket = { version = "0.5", features = ["json", "secrets"] }
rocket_db_pools = { version = "0.1", features = ["sqlx_postgres"] }

sqlx = {
  version = "0.7",
default-features = false,
# Database

}

features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
]
# Async utilities
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Additional utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rocket = { version = "0.5", features = ["testing"] }
